--- a/public_html/css/custom-style.css
+++ b/public_html/css/custom-style.css
@@ -1,7 +1,8 @@
 div {
     border-style: solid;
-    border-width: 5px;
+    border-width: 10px;
     padding: 30px;
+    border-color: blueviolet;
 }
 
 .container {
