--- a/public_html/css/custom-style.css
+++ b/public_html/css/custom-style.css
@@ -13,3 +13,14 @@ div {
 .row {
     border-color: blue;
 }
+
+.list-group-item {
+    border: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.uppercase {
+    text-transform: uppercase;
+    font-size: 38px;
+}
