--- a/public_html/css/custom-style.css
+++ b/public_html/css/custom-style.css
@@ -24,3 +24,8 @@ div {
     text-transform: uppercase;
     font-size: 38px;
 }
+
+#current-link {
+   text-decoration: none;
+   font-size: 20px;
+}
