--- a/public_html/css/custom-style.css
+++ b/public_html/css/custom-style.css
@@ -1,8 +1,7 @@
 div {
     border-style: solid;
-    border-width: 10px;
     padding: 30px;
-    border-color: blueviolet;
+    border-color: black;
 }
 /*This puts a "blueviolet" border on my columns while making it 10 pixels wide with 30 pixels of padding.*/
 .container {
@@ -10,7 +9,7 @@ div {
 }
 /*This makes my container border black*/
 .row {
-    border-color: blue;
+    border-color: black;
 }
 /*This makes my row border blue*/
 .list-group-item {
@@ -36,7 +35,7 @@ div {
 /*Gives the bootstrap feature "jumbotron" a containing background image of SPAAAAAAACE!!!!*/
 body{
     background-image: url(http://images.wikia.com/infamous/images/archive/4/4a/20120610170740!Kessler-Smirking.png);
-    color: whitesmoke;
+    color: grey;
     background-size: contain;
 }
 /*Gives the body a background of Kessler from Infamous and a text color called "whitesmoke"*/
